fix overlap issue

--- a/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
+++ b/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
@@ -29,7 +29,7 @@ $fg-screen-sm: 480px;
     @include tablet{
       height: 1520px;
     }
-    width: 96%;
+    width: 110%;
     max-width: 1230px;
     min-height: 600px;
     background: url('_popups/fit-guide-bg-desktop-Mar-8.jpg') left top no-repeat #e7e6e5;
